tests/error/modifier_errors/higher_order.err
Error: Type mismatch (at $FILE:17:16)
   | 
15 |     q = qubit()
16 |     with dagger:
17 |         test_ho(h, q)
   |                 ^ Expected argument of type `qubit -> None`, got `() -> None`

Guppy compilation failed due to 1 previous error
